agregando una plantilla de idiomas

--- a/helloDjango/catalogo/templates/base.html
+++ b/helloDjango/catalogo/templates/base.html
@@ -20,6 +20,7 @@
                     <li><a href="{% url 'libros' %}">Todos los Libros</a></li>
                     <li><a href="{% url 'autores' %}">Todos los Autores</a></li>
                     <li><a href="{% url 'generos' %}">Todos los Generos</a></li>
+                    <li><a href="{% url 'idiomas' %}">Todios los Idiomas</a></li>
                 </ul>
                 {% endblock %}
             </div>
