--- a/helloDjango/catalogo/templates/generos.html
+++ b/helloDjango/catalogo/templates/generos.html
@@ -11,6 +11,6 @@
     {% endfor %}
 </ul>
 {% else %}
-<p>Oops! No tenemos generos de libros dn el catalogo.</p>
+<p>Oops! No tenemos generos de libros en el catalogo.</p>
 {% endif %}
 {% endblock %}
