--- a/helloDjango/catalogo/templates/catalogo.html
+++ b/helloDjango/catalogo/templates/catalogo.html
@@ -9,5 +9,6 @@
     <li><strong>Libros: </strong>{{ nroLibros }}</li>
     <li><strong>Ejemplares: </strong>{{ nroEjemplares }}</li>
     <li><strong>Disponibles: </strong>{{ nroDisponibles }}</li>
+    <li><strong>Idiomas: </strong>{{ nroIdiomas }}</li>
 </ul>
 {% endblock %}
