--- a/helloDjango/catalogo/templates/idiomas.html
+++ b/helloDjango/catalogo/templates/idiomas.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Idiomas</h1>
+<p><a href="{% url 'idioma_new' %}" class="btn btn-secondary">Nuevo</a></p>
 {% if idiomas %}
 <ul>
     {% for idioma in idiomas %}
     <li>
-        <a href="">{{ idioma.nombre }}</a>
+        <a href="{% url 'idioma_update' idioma.id %}">{{ idioma.nombre }}</a>
     </li>
     {% endfor %}
 </ul>
